scheduler grid display updates, sort by column made better

--- a/app/scheduler/scheduler-home.html
+++ b/app/scheduler/scheduler-home.html
@@ -1,4 +1,4 @@
-<div class="view-container-small" ng-controller="SchedulerHomeCtrl as vm">
+<div class="view-container" ng-controller="SchedulerHomeCtrl as vm">
 
     <div layout="row" layout-align="center" class="md-whiteframe-z4" md-theme="{{themePrimaryButtons}}" style="min-width: 1200px;">
         <md-button class="scheduler-nav-home-item md-primary md-raised" ink-ripple flex ng-click="vm.stateGo('subarrays')">
