--- a/app/admin/admin.html
+++ b/app/admin/admin.html
@@ -1,25 +1,41 @@
-<div class="view-container-small" flex ng-controller="AdminCtrl as vm" layout="column">
+<div class="view-container" flex ng-controller="AdminCtrl as vm" layout="column">
     <div class="md-whiteframe-z1" flex layout="column" style="margin-bottom: 16px; position: relative">
         <loading-overlay ng-show="vm.userListProcessingServerCall"></loading-overlay>
-        <md-toolbar class="panel-toolbar md-whiteframe-z1">
-            <div class="md-toolbar-tools" layout="row">
-                <span flex>Users</span>
-                <md-checkbox style="font-size: 14px;" ng-model="vm.showDeactivatedUsers">Show Deactivated Users</md-checkbox>
-                <md-text-float md-theme="none" style="font-size: 12px; margin-top: -12px;" type="search" ng-model-options="{ debounce: 300 }" ng-model="q" label="Search Users..." class=""></md-text-float>
+        <md-toolbar class="panel-toolbar md-whiteframe-z1" ng-mouseenter="showUserTools = true;" ng-mouseleave="showUserTools = false;">
+            <div class="unselectable md-toolbar-tools" layout="row">
+                <span flex ng-click="vm.setOrderBy('id')" style="cursor: pointer;"><span>Users<md-tooltip>Sort by database ID</md-tooltip></span></span>
+                <md-checkbox class="fade-in" ng-show="showUserTools" style="font-size: 14px;" ng-model="vm.showDeactivatedUsers">Show Deactivated Users</md-checkbox>
+                <md-text-float class="fade-in" ng-show="showUserTools" md-theme="none" style="font-size: 12px; margin-top: -12px;" type="search" ng-model-options="{ debounce: 300 }" ng-model="q"
+                               label="Search Users..." class=""></md-text-float>
                 <md-button aria-label="Create A User" style="margin-right: 8px;" ng-click="vm.createUser()" class="md-fab md-button-fab-small md-primary" md-theme="{{themePrimaryButtons}}">
                     <span class="fa fa-plus" style="margin-top: 2px;"></span>
                     <md-tooltip>Create A User</md-tooltip>
                 </md-button>
             </div>
+
+            <div flex class="unselectable list-subheader-title" style="padding-top: 8px; z-index: 0;" layout="row" layout-align="center center">
+                <span style="max-width: 265px;min-width: 265px;" class="subheader-text" ng-click="vm.setOrderBy('name')">
+                    <span style="padding: 8px">Name</span>
+                    <span class="fa" ng-class="{'fa-caret-up': vm.orderBy.value === 'name' && !vm.orderBy.reverse, 'fa-caret-down': vm.orderBy.value === 'name' && vm.orderBy.reverse}"
+                          style="margin-right: 4px;"></span>
+                </span>
+                <span style="max-width: 334px;min-width: 334px;" class="subheader-text" ng-click="vm.setOrderBy('email')">
+                    <span style="padding: 8px">Email</span>
+                    <span class="fa" ng-class="{'fa-caret-up': vm.orderBy.value === 'email' && !vm.orderBy.reverse, 'fa-caret-down': vm.orderBy.value === 'email' && vm.orderBy.reverse}"
+                          style="margin-right: 4px;"></span>
+                </span>
+                <span flex ng-click="vm.setOrderBy('roles')" class="subheader-text">
+                    <span style="padding: 8px">Roles</span>
+                    <span class="fa" ng-class="{'fa-caret-up': vm.orderBy.value === 'roles' && !vm.orderBy.reverse, 'fa-caret-down': vm.orderBy.value === 'roles' && vm.orderBy.reverse}"
+                          style="margin-right: 4px;"></span>
+                </span>
+            </div>
         </md-toolbar>
 
-        <div flex class="list-subheader-title" layout="row" layout-align="center center">
-            <md-subheader style="max-width: 250px;min-width: 250px; margin-left: 4px;" ng-click="vm.setOrderBy('name')">Name</md-subheader>
-            <md-subheader style="max-width: 325px;min-width: 325px;" ng-click="vm.setOrderBy('email')">Email</md-subheader>
-            <md-subheader flex ng-click="vm.setOrderBy('roles')">Roles</md-subheader>
-        </div>
+
         <div id="userListId" flex class="user-list">
-            <div class="user-row" ng-repeat="user in vm.userData | filter:q | orderBy:vm.orderBy.value:vm.orderBy.reverse as results track by user.id" flex layout="row" layout-align="start center" style="background: white;"
+            <div class="user-row animate-repeat" ng-repeat="user in vm.userData | filter:q | orderBy:vm.orderBy.value:vm.orderBy.reverse as results track by user.id" flex layout="row" layout-align="start center"
+                 style="background: white;"
                  ng-if="user.activated || vm.showDeactivatedUsers" ng-class="{ 'deactivated-user': !user.activated, 'activated-user': user.activated }">
                 <div flex class="user-cell" style="max-width: 265px; min-width: 265px;" layout="row">
                     <input flex type="text" placeholder="Name" md-theme="{{themeSecondary}}" ng-attr-id="{{ 'user-name-input-' + user.name }}" label="Name" ng-if="user.editing" ng-model="user.name"/>
@@ -31,7 +47,7 @@
                 </div>
                 <div flex class="user-cell" layout-align="start center" layout="row">
                     <dropdown-multiselect ng-if="user.editing" options="vm.userRoles" model="user"></dropdown-multiselect>
-                    <span class="cell-span" ng-if="!user.editing && user.roles.length > 0" ng-repeat="role in user.roles | orderBy:role" style="margin-left: 8px;">{{role}};<md-tooltip>User's Roles</md-tooltip></span>
+                    <span class="cell-span" ng-if="!user.editing && user.roles.length > 0" ng-repeat="role in user.roles | orderBy:role">{{role}};<md-tooltip>User's Roles</md-tooltip></span>
                     <span class="cell-span" ng-if="!user.editing && user.roles.length === 0">No Roles Assigned<md-tooltip>User's Roles</md-tooltip></span>
                 </div>
 
@@ -39,31 +55,19 @@
 
                 <div flex ng-show="user.editing" class="user-editing-buttons" layout="row">
                     <span flex></span>
-                    <button ng-show="!user.temp" class="user-row-button" ng-click="vm.deactivateUser(user)">
+                    <button title="Deactivate User" ng-show="!user.temp" class="user-row-button" ng-click="vm.deactivateUser(user)">
                         <span class="fa fa-ban"></span>
-                        <md-tooltip>
-                            Deactivate User
-                        </md-tooltip>
                     </button>
-                    <button class="user-row-button" ng-click="vm.undoUserChanges(user)">
+                    <button title="Undo User Changes" class="user-row-button" ng-click="vm.undoUserChanges(user)">
                         <span class="fa fa-undo"></span>
-                        <md-tooltip>
-                            Undo User Changes
-                        </md-tooltip>
                     </button>
-                    <button class="user-row-button" ng-click="vm.saveUser(user, $event)">
+                    <button title="Save User Changes" class="user-row-button" ng-click="vm.saveUser(user, $event)">
                         <span class="fa fa-check"></span>
-                        <md-tooltip>
-                            Save User Changes
-                        </md-tooltip>
                     </button>
                 </div>
                 <div ng-show="!user.editing" style="min-width: 150px;">
-                    <button ng-click="vm.editUser(user, $event)" class="user-row-button">
+                    <button title="Edit User" ng-click="vm.editUser(user, $event)" class="user-row-button">
                         <span class="fa fa-edit"></span>
-                        <md-tooltip md-theme>
-                            Edit User
-                        </md-tooltip>
                     </button>
                 </div>
                 <md-tooltip ng-if="!user.activated">
