--- a/app/scheduler/scheduler.html
+++ b/app/scheduler/scheduler.html
@@ -1,42 +1,47 @@
-<div flex layout="column" style="min-width: 1300px; min-height: 850px; margin-bottom: 8px;" ng-controller="SchedulerCtrl as vm">
+<div flex layout="column" style="min-width: 1515px; min-height: 850px; margin-bottom: 8px;" ng-controller="SchedulerCtrl as vm">
     <div layout="row" flex>
         <div flex layout="column" style="margin: 0;">
-            <div flex layout="column" style="min-height: 150px" class="schedule-list" id="schedulerDraftView"
+            <div flex layout="column" style="min-height: 150px" class="schedule-list" id="schedulerDraftView"  ng-mouseenter="showDraftTools = true;" ng-mouseleave="showDraftTools = false;"
                  ng-class="{'md-whiteframe-z1': !vm.selectedScheduleDraft, 'whiteframe-z1-left': vm.selectedScheduleDraft}">
                 <loading-overlay ng-show="vm.draftListProcessingServerCall"></loading-overlay>
-                <md-toolbar class="panel-toolbar panel-toolbar-medium md-whiteframe-z1">
-                    <div layout="row" layout-align="start center" layout-padding flex>
-                        <span style="margin-left: 8px;">Schedule Drafts</span>
-                        <span flex></span>
-                        <md-button aria-label="Refresh List" style="margin-right: 17px; font-size: 16px;" class="md-fab md-button-fab-small md-primary" md-theme="{{themePrimaryButtons}}"
-                                   ng-click="vm.refreshScheduleBlocks()">
-                            <span class="fa fa-refresh"></span>
-                            <md-tooltip>Refresh List</md-tooltip>
-                        </md-button>
-                        <md-button aria-label="Create A Draft" style="margin-right: 17px; font-size: 16px;" class="md-fab md-button-fab-small md-primary" md-theme="{{themePrimaryButtons}}"
+                <md-toolbar class="panel-toolbar md-whiteframe-z1">
+                    <div layout="row" class="unselectable md-toolbar-tools-small">
+                        <span flex>Schedule Drafts</span>
+                        <input class="fade-in" ng-show="showDraftTools" type="search" style="font-size: 14px; margin-left: 8px; width: 140px; background: transparent; border: 0"
+                               ng-model-options="{ debounce: 300 }" ng-model="vm.q" placeholder="Search Drafts..."/>
+                        <md-button aria-label="Create A Draft" style="font-size: 16px;" class="md-fab md-button-fab-small md-primary" md-theme="{{themePrimaryButtons}}"
                                    ng-click="vm.addDraftSchedule()">
-                            <!--<div style="left: 0; top: 0; width: 38px; height: 38px; position: absolute;"><add-list-item-animation height="49" list="#schedule-draft-data-list-id"></add-list-item-animation></div>-->
                             <span class="fa fa-plus"></span>
                             <md-tooltip>Create A Schedule Draft</md-tooltip>
                         </md-button>
-                        <select class="form-control" style="display: inline; width: 150px;" ng-model="vm.draftsOrderBy" ng-options="s.label for s in vm.draftsOrderByFields">
-                            <option value="">-- Order By --</option>
-                        </select>
-                        <input type="search" style="font-size: 14px; margin-left: 8px; width: 140px; background: transparent; border: 0" ng-model="vm.q" placeholder="Search Drafts..."/>
+                    </div>
+
+                    <div flex class="unselectable list-subheader-title" style="padding-top: 8px; z-index: 0;" layout="row" layout-align="center center">
+                        <span style="max-width: 160px;min-width: 160px;" class="subheader-text" ng-click="vm.setDraftsOrderBy('id_code')">
+                            <span style="padding: 8px">ID</span>
+                            <span class="fa" ng-class="{'fa-caret-up': vm.draftsOrderBy.value === 'id_code' && !vm.draftsOrderBy.reverse, 'fa-caret-down': vm.draftsOrderBy.value === 'id_code' && vm.draftsOrderBy.reverse}"
+                                  style="margin-right: 4px;"></span>
+                        </span>
+                        <span flex style="width: 180px;" class="subheader-text" ng-click="vm.setDraftsOrderBy('description')">
+                            <span style="padding: 8px">Description</span>
+                            <span class="fa" ng-class="{'fa-caret-up': vm.draftsOrderBy.value === 'description' && !vm.draftsOrderBy.reverse, 'fa-caret-down': vm.draftsOrderBy.value === 'description' && vm.draftsOrderBy.reverse}"
+                                  style="margin-right: 4px;"></span>
+                        </span>
+                        <span style="max-width: 122px;min-width: 122px;" class="subheader-text" ng-click="vm.setDraftsOrderBy('type')">
+                            <span style="padding: 8px">Type</span>
+                            <span class="fa" ng-class="{'fa-caret-up': vm.draftsOrderBy.value === 'type' && !vm.draftsOrderBy.reverse, 'fa-caret-down': vm.draftsOrderBy.value === 'type' && vm.draftsOrderBy.reverse}"
+                                  style="margin-right: 4px;"></span>
+                        </span>
+                        <span style="max-width: 280px;min-width: 280px;" class="subheader-text" ng-click="vm.setDraftsOrderBy('desired_start_time')">
+                            <span style="padding: 8px">Desired Time</span>
+                            <span class="fa" ng-class="{'fa-caret-up': vm.draftsOrderBy.value === 'desired_start_time' && !vm.draftsOrderBy.reverse, 'fa-caret-down': vm.draftsOrderBy.value === 'desired_start_time' && vm.draftsOrderBy.reverse}"
+                                  style="margin-right: 4px;"></span>
+                        </span>
                     </div>
                 </md-toolbar>
 
-                <div flex class="list-subheader-title" layout="row" layout-align="center center">
-                    <md-subheader style="max-width: 160px;min-width: 160px; margin: 4px;">ID</md-subheader>
-                    <md-subheader flex style="padding-left: 5px;width: 180px;">Description</md-subheader>
-                    <md-subheader style="width: 102px">Type</md-subheader>
-                    <md-subheader style="width: 140px">Desired Time</md-subheader>
-                    <md-subheader style="width: 120px">Actions</md-subheader>
-                </div>
-
-
                 <div flex id="schedule-draft-data-list-id" class="schedule-draft-data-list" style="padding: 0; direction: rtl">
-                    <div ng-repeat="item in vm.scheduleDraftData | filter:vm.q | orderBy:vm.draftsOrderBy.value:false"
+                    <div ng-repeat="item in vm.scheduleDraftData | filter:vm.q | orderBy:vm.draftsOrderBy.value:vm.draftsOrderBy.reverse"
                          ng-click="item.confirmDelete = false; vm.setSelectedScheduleDraft(item)"
                          ng-class="{'selected-schedule-row': item === vm.selectedScheduleDraft}" class="schedule-draft-item animate-repeat" layout="column">
                         <div style="" layout="row" layout-align="center center">
@@ -117,14 +122,14 @@
                  ng-class="{'md-whiteframe-z1': !vm.selectedSchedule, 'whiteframe-z1-left': vm.selectedSchedule}">
                 <loading-overlay ng-show="vm.scheduleListProcessingServerCall"></loading-overlay>
                 <!--<loading-overlay ng-show="vm.draftListProcessingServerCall"></loading-overlay>-->
-                <md-toolbar class="panel-toolbar panel-toolbar-medium md-whiteframe-z1">
+                <md-toolbar class="panel-toolbar panel-toolbar-medium md-whiteframe-z1" ng-mouseenter="showSchduleTools = true;" ng-mouseleave="showSchduleTools = false;">
                     <div layout="row" layout-align="start center" layout-padding flex>
                         <span style="margin-left: 8px;">Schedule Observations</span>
                         <span flex></span>
-                        <select class="form-control" style="display: inline; width: 150px;" ng-model="vm.schedulesOrderBy" ng-options="s.label for s in vm.draftsOrderByFields">
-                            <option value="">-- Order By --</option>
-                        </select>
-                        <input type="search" style="font-size: 14px; margin-left: 8px; width: 140px; background: transparent; border: 0" ng-model="vm.q2" placeholder="Search Schedules..."/>
+                        <!--<select class="form-control" style="display: inline; width: 150px;" ng-model="vm.schedulesOrderBy" ng-options="s.label for s in vm.draftsOrderByFields">-->
+                            <!--<option value="">-- Order By --</option>-->
+                        <!--</select>-->
+                        <input ng-show="showSchduleTools" class="fade-in" type="search" style="font-size: 14px; margin-left: 8px; width: 140px; background: transparent; border: 0" ng-model="vm.q2" ng-model-options="{ debounce: 300 }" placeholder="Search Schedules..."/>
                     </div>
                 </md-toolbar>
 
@@ -192,7 +197,7 @@
             <div style="margin-top: 8px; overflow: hidden" layout="column" class="md-whiteframe-z1 schedule-block-completed-list">
                 <loading-overlay ng-show="vm.completedListProcessingServerCall"></loading-overlay>
 
-                <md-toolbar class="panel-toolbar panel-toolbar-medium md-whiteframe-z1">
+                <md-toolbar class="panel-toolbar md-whiteframe-z1" ng-mouseenter="showCompletedTools = true;" ng-mouseleave="showCompletedTools = false;">
                     <div layout="row" layout-align="start center" layout-padding flex>
 
                         <span style="margin-left: 8px; cursor: pointer;"
@@ -200,16 +205,39 @@
                               ng-click="completedScheduleBlockListVisible = !completedScheduleBlockListVisible;">
                             Completed Schedule Blocks</span>
                         <span flex></span>
-                        <input type="search" style="font-size: 14px; margin-left: 8px; width: 140px; background: transparent; border: 0" ng-model="vm.q3" placeholder="Search Schedules..."/>
+                        <input ng-show="showCompletedTools" class="fade-in" type="search" style="font-size: 14px; margin-left: 8px; width: 140px; background: transparent; border: 0" ng-model="vm.q3" placeholder="Search Schedules..."/>
                         <!--<select class="form-control" style="display: inline; width: 150px;" ng-model="vm.schedulesOrderBy" ng-options="s.label for s in vm.draftsOrderByFields">-->
                         <!--<option value="">-- Order By --</option>-->
                         <!--</select>-->
                         <!--<input type="search" style="font-size: 14px; margin-left: 8px; width: 140px; background: transparent; border: 0" ng-model="vm.q2" placeholder="Search Schedules..."/>-->
                     </div>
+
+                    <div flex class="unselectable list-subheader-title" style="padding-top: 8px; z-index: 0;" layout="row" layout-align="center center">
+                        <span style="max-width: 160px;min-width: 160px;" class="subheader-text" ng-click="vm.setCompletedOrderBy('id_code')">
+                            <span style="padding: 8px">ID</span>
+                            <span class="fa" ng-class="{'fa-caret-up': vm.completedOrderBy.value === 'id_code' && !vm.completedOrderBy.reverse, 'fa-caret-down': vm.completedOrderBy.value === 'id_code' && vm.completedOrderBy.reverse}"
+                                  style="margin-right: 4px;"></span>
+                        </span>
+                        <span flex style="width: 180px;" class="subheader-text" ng-click="vm.setCompletedOrderBy('description')">
+                            <span style="padding: 8px">Description</span>
+                            <span class="fa" ng-class="{'fa-caret-up': vm.completedOrderBy.value === 'description' && !vm.completedOrderBy.reverse, 'fa-caret-down': vm.completedOrderBy.value === 'description' && vm.completedOrderBy.reverse}"
+                                  style="margin-right: 4px;"></span>
+                        </span>
+                        <span style="max-width: 110px;min-width: 110px;" class="subheader-text" ng-click="vm.setCompletedOrderBy('type')">
+                            <span style="padding: 8px">Type</span>
+                            <span class="fa" ng-class="{'fa-caret-up': vm.completedOrderBy.value === 'type' && !vm.completedOrderBy.reverse, 'fa-caret-down': vm.completedOrderBy.value === 'type' && vm.completedOrderBy.reverse}"
+                                  style="margin-right: 4px;"></span>
+                        </span>
+                        <span style="max-width: 200px;min-width: 200px;" class="subheader-text" ng-click="vm.setCompletedOrderBy('desired_start_time')">
+                            <span style="padding: 8px">Desired Time</span>
+                            <span class="fa" ng-class="{'fa-caret-up': vm.completedOrderBy.value === 'desired_start_time' && !vm.completedOrderBy.reverse, 'fa-caret-down': vm.completedOrderBy.value === 'desired_start_time' && vm.completedOrderBy.reverse}"
+                                  style="margin-right: 4px;"></span>
+                        </span>
+                    </div>
                 </md-toolbar>
 
                 <div class="schedule-draft-data-list slide-in-vertically-panel-content" style="padding: 0; direction: rtl; min-height: 45px;" ng-show="completedScheduleBlockListVisible">
-                    <div ng-repeat="item in vm.scheduleCompletedData | filter:vm.q3"
+                    <div ng-repeat="item in vm.scheduleCompletedData | filter:vm.q3 | orderBy:vm.completedOrderBy.value:vm.completedOrderBy.reverse"
                          class="schedule-draft-item animate-repeat" layout="column">
 
                         <div style="" layout="row" layout-align="center center">
@@ -316,5 +344,13 @@
             </md-item>
         </md-list>
     </div>
+
+  <div class="refresh-schedule-block-lists-button">
+      <md-button aria-label="Refresh Schedule Blocks" style="font-size: 16px; width: 34px;" class="md-primary" md-theme="{{themePrimaryButtons}}"
+                 ng-click="vm.refreshScheduleBlocks()">
+          <span class="fa fa-refresh"></span>
+          <md-tooltip>Refresh Schedule Blocks</md-tooltip>
+      </md-button>
+  </div>
 
 </div>
